# cpp-brain-teasers

./: .gitignore  README.md
.github/workflows/: ci.yml
ci/linux/: build.sh  clang-tidy.sh  common.sh  sanitizer.sh  setup.sh
src/: CMakeLists.txt  a-constant-struggle.cpp  a-destructive-relationship.cpp  a-false-start.cpp  a-little-sum-thing.cpp  a-specialized-string-theory.cpp  a-strange-assignment.cpp  a-strong-point.cpp  all-good-things-must-come-to-an-end.cpp  an-overloaded-container.cpp  aristotles-sum-of-parts.cpp  back-from-the-future.cpp  counting-copies.cpp  going-global.cpp  hack-the-planet.cpp  how-many-degrees.cpp  monsters-on-the-move.cpp  moving-out.cpp  off-to-a-good-start.cpp  sizing-up-some-characters.cpp  string-theory.cpp  the-phantom-spaceship.cpp  weakly-typed-strongly-puzzling.cpp  whats-the-time-of-death.cpp  whos-up-first.cpp  will-it-move.cpp
src/examples/: CMakeLists.txt
src/examples/braced-init-list/: CMakeLists.txt  braced-init-list.cpp
src/examples/default-member-initializer/: CMakeLists.txt  default-member-initializer.cpp
src/examples/default-move/: CMakeLists.txt  default-move.cpp
src/examples/deterministic-order/: CMakeLists.txt  deterministic-order.cpp
src/examples/range-for/: CMakeLists.txt  range-for.cpp
src/examples/rvo/: CMakeLists.txt  rvo.cpp
src/examples/siof/: CMakeLists.txt  Value.h  source1.cpp  source2.cpp
src/examples/spaceship/: CMakeLists.txt  spaceship-crtp.cpp  spaceship-parameter.cpp  spaceship-pure.cpp
src/examples/std_atomic/: CMakeLists.txt  std_atomic.cpp
src/examples/template-vs-function/: CMakeLists.txt  template-vs-function.cpp
src/examples/which-constructors/: CMakeLists.txt  which-constructors.cpp
