add_subdirectory(siof)
add_subdirectory(default-move)
add_subdirectory(range-for)
add_subdirectory(std_atomic)
add_subdirectory(rvo)
add_subdirectory(braced-init-list)
add_subdirectory(default-member-initializer)
add_subdirectory(which-constructors)
add_subdirectory(spaceship)
add_subdirectory(deterministic-order)
add_subdirectory(template-vs-function)
